# ChangeLog for sci-chemistry/unio
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Nov 2013; Justin Lecher <jlec@gentoo.org> unio-2.0.2-r1.ebuild:
  Allow emul packages

  13 Aug 2013; Justin Lecher <jlec@gentoo.org> -unio-2.0.1-r1.ebuild,
  -unio-2.0.2.ebuild, +unio-2.0.2-r1.ebuild, metadata.xml:
  Fix upstreams silent version bump

  22 Dec 2011; Justin Lecher <jlec@gentoo.org> +unio-2.0.2.ebuild,
  metadata.xml:
  Version Bump

*unio-2.0.2 (22 Dec 2011)

  22 Dec 2011; Justin Lecher <jlec@gentoo.org> +unio-2.0.2.ebuild:
  Version Bump

  19 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  QA on quoting

  19 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  fperms sucks, because it could not handle wildcards

  09 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  Missing files are executable now

  05 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  Prefix fix

*unio-2.0.1-r1 (05 Nov 2010)

  05 Nov 2010; Justin Lecher <jlec@gentoo.org> -unio-2.0.1.ebuild,
  +unio-2.0.1-r1.ebuild:
  Install wrapper correctly, bin QA hacks

*unio-2.0.1 (02 Oct 2010)

  02 Oct 2010; Justin Lecher <jlec@gentoo.org> +unio-2.0.1.ebuild,
  +metadata.xml:
  New addition
